Faster inheritance with no visuals implemented. Agents are now able to run the whole game as well.